kustomize/e2e/baseIngress.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress-links
spec:
  rules:
    - host: links.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: controller
                port:
                  number: 80
