kustomize/e2e/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: links.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: controller
                port:
                  number: 80
