kustomize/e2e/kustomization.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/SchemaStore/schemastore/refs/heads/master/src/schemas/json/kustomization.json
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - ../with-namespace
  - ingress.yaml
  - extraIngress.yaml

patches:
  - path: neverPullImage.yaml
