kustomize/e2e/neverPullImage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
spec:
  template:
    spec:
      containers:
        - name: controller
          imagePullPolicy: Never
