kustomize/e2e/skippedPathIngress.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skipped-paths-ingress
  namespace: ingress-links
  annotations:
    ingress-links.nev.dev/skip: "true"
spec:
  rules:
    - host: links.localhost
      http:
        paths:
          - pathType: Exact
            path: /skip
            backend:
              service:
                name: controller
                port:
                  number: 80
